Notebook template updated with Rubric references.

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You may add as many cells as you require to complete this task."
+    "You may add as many cells as you require to complete this task. Refer to the Rubric for E-tivity 1 to see how you will be assessed."
    ]
   },
   {
@@ -97,7 +97,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write your reflection in below cell."
+    "Write your reflection in below cell. With reference to the Rubric for E-tivity 1:\n",
+    "- Provide an accurate description of your code with advantages and disadvantages of design choices.\n",
+    "- Compare your approach to alternative (peer) approaches.\n",
+    "- Clearly describe how you have used your peers' work/input and how this has affected your own understanding / insights.\n",
+    "\n",
+    "If you have not used peer input, you may state this, but your submission history in Gitlab should clearly show this is the case."
    ]
   },
   {
@@ -110,7 +115,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
