--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,6 +133,8 @@
     "    for coefficient, power in elements:\n",
     "        if power != 0:\n",
     "            result.add((coefficient * power, power - 1))\n",
+    "        else:\n",
+    "            result.add((0, 0))\n",
     "    return result"
    ]
   },
@@ -146,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,6 +165,9 @@
     "    # Sort coefficients by power in descending order - abs(power) in case of negative powers\n",
     "    # This will make the final string easier to read - or closer to conventional notation\n",
     "    coefficients_ = sorted(coefficients_, key=lambda x_: abs(x_[1]), reverse=True)\n",
+    "\n",
+    "    if coefficients_ == [(0, 0)]:\n",
+    "        return \"0\"\n",
     "\n",
     "    for coefficient, power in coefficients_:\n",
     "        if coefficient == 1:\n",
@@ -204,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -336,6 +341,84 @@
    ],
    "source": [
     "polynomial =  {(1, 5), (2, 3), (-1, 2)}\n",
+    "\n",
+    "print(f\"f(x): {to_str(polynomial)}\")\n",
+    "\n",
+    "x = 2\n",
+    "f_x = evaluate_polynomial(polynomial, x)\n",
+    "print(f\"f({x}): {f_x}\")\n",
+    "\n",
+    "f_prime = differentiate(polynomial)\n",
+    "print(f\"f'(x): {to_str(f_prime)}\")\n",
+    "\n",
+    "f_prime_x = evaluate_polynomial(f_prime, x)\n",
+    "print(f\"f'({x}): {f_prime_x}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f(x): 7\n",
+      "f(2): 7\n",
+      "f'(x): 0\n",
+      "f'(2): 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "polynomial =  {(7, 0)}\n",
+    "\n",
+    "print(f\"f(x): {to_str(polynomial)}\")\n",
+    "\n",
+    "x = 2\n",
+    "f_x = evaluate_polynomial(polynomial, x)\n",
+    "print(f\"f({x}): {f_x}\")\n",
+    "\n",
+    "f_prime = differentiate(polynomial)\n",
+    "print(f\"f'(x): {to_str(f_prime)}\")\n",
+    "\n",
+    "f_prime_x = evaluate_polynomial(f_prime, x)\n",
+    "print(f\"f'({x}): {f_prime_x}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " #### Example 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f(x): x\n",
+      "f(2): 2\n",
+      "f'(x): 1\n",
+      "f'(2): 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "polynomial =  {(1, 1)}\n",
     "\n",
     "print(f\"f(x): {to_str(polynomial)}\")\n",
     "\n",
@@ -401,7 +484,8 @@
     "#### Peer Assessment\n",
     "\n",
     "* The list is a nice idea. Simple to understand and very effective for low-rder polynomials. Great for starting and learning how to map mathematics to code.\n",
-    "* Use of recursion is also very elegent. It does have issues as the order or the polynomials increases. For example, you would never use such on low-power moobile devices for crypographic curve evaluation. \n"
+    "* Use of recursion is also very elegent. It does have issues as the order or the polynomials increases. For example, you would never use such on low-power moobile devices for crypographic curve evaluation. \n",
+    "* Mitchell reminded me about the importance of testing more corner cases.\n"
    ]
   }
  ],
