--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,13 +142,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Utility Pretty print\n",
+    "## Utility methods: Pretty print\n",
     "The following is a utility function to make the polynomials more human-readable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,6 +196,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that this is the most complex part of this assignment; where most things can go wrong."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Examples of use\n",
     "Here we show the use of the derivative and evaluation functions (as well as the utility to_str)."
    ]
@@ -209,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -475,6 +482,13 @@
     "    $$5x^3 + 7x^2 + 3x + 6$$\n",
     "as:\n",
     "    $${\\{(5, 3), (7, 2), (3, 1), (6, 0)\\}}$$\n",
+    "\n",
+    "#### Implementation\n",
+    "##### Differentition\n",
+    "I implemented the Power rule method for differentiating a polynomial, where the input to the function is a set of tuples (see above) and the output is a set of tuples representing the differentiated polynomial. Currently, it uses a more loop-based approach for ease-of-reading.\n",
+    "\n",
+    "##### Evaluating a polynomial\n",
+    "TODO:\n",
     "\n",
     "#### Advantages/Disadvantages\n",
     "* using tuples, while efficient does require more knowledge of python data structures. \n",
