Refinement of notes

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -478,9 +478,12 @@
     "\n",
     "* Using tuples has many benefits including space efficiency and ease-of-use (i.e. I don't have to write out lots of zeros which may be error-prone).\n",
     "\n",
-    "So, in my case I can represent \n",
+    "So, in my case I can represent: \n",
+    "\n",
     "    $$5x^3 + 7x^2 + 3x + 6$$\n",
+    "\n",
     "as:\n",
+    "\n",
     "    $${\\{(5, 3), (7, 2), (3, 1), (6, 0)\\}}$$\n",
     "\n",
     "#### Implementation\n",
