--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -468,13 +468,15 @@
     "#### Data Representations\n",
     "First I will explain my chosen data representation. \n",
     "\n",
-    "* I could have used a list where the index in the list prepresents the power however this becomes very inefficient (in terms of memeory and time) as you start to process higher order polynomials e.g. \n",
+    "* I could have used a list where the index in the list prepresents the power however this becomes very inefficient (in terms of memeory and time) as you start to process higher order polynomials. \n",
     "\n",
-    "    $$2^{1000}$$\n",
+    "E.g. consider \n",
     "\n",
-    "    In this case, where you have higher order polynomials, you would have a list with 1000 elements, 999 of which are zero). \n",
+    "$$2^{1000}$$\n",
     "\n",
-    "* I have chosen to represent the polynomial as a set of tuples, where each tuple represents an element of the polynomial set. The first element of the tuple is the coefficient and the second element is the power of the corresponding term.  \n",
+    "In this case, where you have higher order polynomials, you would have a list with 1000 elements, 999 of which are zero). \n",
+    "\n",
+    "* So, I have chosen to represent the polynomial as a set of tuples, where each tuple represents an element of the polynomial set. The first element of the tuple is the coefficient and the second element is the power of the corresponding term.  \n",
     "\n",
     "* Using tuples has many benefits including space efficiency and ease-of-use (i.e. I don't have to write out lots of zeros which may be error-prone).\n",
     "\n",
