Initial to prove the git process

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Student name:"
+    "Student name: Peter O'Mahony"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Student ID:"
+    "Student ID: 8361967"
    ]
   },
   {
@@ -37,18 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#None"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you believe required imports are missing, please contact your moderator."
    ]
   },
   {
@@ -69,14 +62,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You may add as many cells as you require to complete this task. Refer to the Rubric for E-tivity 1 to see how you will be assessed."
+    "# Option 1: Symbolic calculation of the derivative\n",
+    "## Write 2 Python functions:\n",
+    "\n",
+    "The first one to symbolically calculate the derivative of a polynomial with one variable. The input should be a polynomial and the output should also be a polynomial.\n",
+    "\n",
+    "The second one to evaluate (i.e. get the numerical value) of a polynomial for a given value of its variable. The input should be a polynomial and a value (point at which to evaluate the polynomial). The output should be a scalar.\n",
+    "\n",
+    "Test your code with a few salient polynomials (minimum of 3) for which you have calculated the derivative of these polynomials manually.\n",
+    "\n",
+    "### Initial thoughts:\n",
+    "Split it into subtasks\n",
+    "1. handle input of equation\n",
+    "2. differentiate the input\n",
+    "3. display the resulting prettified input and output\n",
+    "4. handle input of variable value\n",
+    "5. calculate the result\n",
+    "6. display resulting scalar\n",
+    "7. display a set of test results\n",
+    "\n",
+    "Data structures I am considering are lists and tuples.\n",
+    "I want to maximise the flexibility of the solution so I will ask the user to specify the powers rather than determine them impicitly from the order of the coefficients and assume descending powers\n",
+    "\n",
+    "I'd like to use tuples because the data are static after entered and tuples are more efficient than lists and I don't need to do much manipulation of the structures.\n",
+    "\n",
+    "I'll try to use UTF8 characters to prettify the results (thereby avoiding any libraries). Note Jason's idea to sort the results by descending power as is conventional."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -129,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
