Initial to test git process

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -65,11 +65,11 @@
     "# Option 1: Symbolic calculation of the derivative\n",
     "## Write 2 Python functions:\n",
     "\n",
-    "The first one to symbolically calculate the derivative of a polynomial with one variable. The input should be a polynomial and the output should also be a polynomial.\n",
+    "*The first one to symbolically calculate the derivative of a polynomial with one variable. The input should be a polynomial and the output should also be a polynomial.*\n",
     "\n",
-    "The second one to evaluate (i.e. get the numerical value) of a polynomial for a given value of its variable. The input should be a polynomial and a value (point at which to evaluate the polynomial). The output should be a scalar.\n",
+    "*The second one to evaluate (i.e. get the numerical value) of a polynomial for a given value of its variable. The input should be a polynomial and a value (point at which to evaluate the polynomial). The output should be a scalar.*\n",
     "\n",
-    "Test your code with a few salient polynomials (minimum of 3) for which you have calculated the derivative of these polynomials manually.\n",
+    "*Test your code with a few salient polynomials (minimum of 3) for which you have calculated the derivative of these polynomials manually.*\n",
     "\n",
     "### Initial thoughts:\n",
     "Split it into subtasks\n",
