--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "$$\\frac{d}{dx}(coefficient \\cdot x^{power}) = coefficient \\cdot power \\cdot x^{(power-1)}$$\n",
     "\n",
-    "And returns the set of the derivatures that make up the output polynomial."
+    "And returns the set of the derivatives that make up the output polynomial."
    ]
   },
   {
