Refactored the test code - removed duplicate code.

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,27 @@
     "    coefficients_str = coefficients_str.rstrip(\"+ \")\n",
     "\n",
     "    # handle the case where coefficient is negative - for ease of reading\n",
-    "    return coefficients_str.replace(\"+ -\", \"- \")"
+    "    return coefficients_str.replace(\"+ -\", \"- \")\n",
+    "\n",
+    "\n",
+    "def test_polynomial_outputs(polynomial: set[tuple[int, int]], x: int) -> None:\n",
+    "    \"\"\"\n",
+    "    Helper function to exercise the polynomial functions (using the previous \n",
+    "    differentiate and evaluate functions for a given value of x).\n",
+    "    :param polynomial: a set of coefficient-power tuples\n",
+    "    :param x: value to evaluate the polynomial at\n",
+    "    :return: None\n",
+    "    \"\"\"\n",
+    "    print(f\"f(x): {to_str(polynomial)}\")\n",
+    "\n",
+    "    f_x = evaluate_polynomial(polynomial, x)\n",
+    "    print(f\"f({x}): {f_x}\")\n",
+    "\n",
+    "    f_prime = differentiate(polynomial)\n",
+    "    print(f\"f'(x): {to_str(f_prime)}\")\n",
+    "\n",
+    "    f_prime_x = evaluate_polynomial(f_prime, x)\n",
+    "    print(f\"f'({x}): {f_prime_x}\")"
    ]
   },
   {
@@ -216,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -232,17 +252,7 @@
    ],
    "source": [
     "polynomial = {(5, 3), (7, 2), (3, 1), (6, 0)}\n",
-    "print(f\"f(x): {to_str(polynomial)}\")\n",
-    "\n",
-    "x = 2\n",
-    "f_x = evaluate_polynomial(polynomial, x)\n",
-    "print(f\"f({x}): {f_x}\")\n",
-    "\n",
-    "f_prime = differentiate(polynomial)\n",
-    "print(f\"f'(x): {to_str(f_prime)}\")\n",
-    "\n",
-    "f_prime_x = evaluate_polynomial(f_prime, x)\n",
-    "print(f\"f'({x}): {f_prime_x}\")"
+    "test_polynomial_outputs(polynomial, 2)"
    ]
   },
   {
@@ -254,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -270,18 +280,7 @@
    ],
    "source": [
     "polynomial =  {(2, 1000)}\n",
-    "\n",
-    "print(f\"f(x): {to_str(polynomial)}\")\n",
-    "\n",
-    "x = 2\n",
-    "f_x = evaluate_polynomial(polynomial, x)\n",
-    "print(f\"f({x}): {f_x}\")\n",
-    "\n",
-    "f_prime = differentiate(polynomial)\n",
-    "print(f\"f'(x): {to_str(f_prime)}\")\n",
-    "\n",
-    "f_prime_x = evaluate_polynomial(f_prime, x)\n",
-    "print(f\"f'({x}): {f_prime_x}\")"
+    "test_polynomial_outputs(polynomial, 2)"
    ]
   },
   {
@@ -293,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -309,18 +308,7 @@
    ],
    "source": [
     "polynomial =   {(3, 2), (-4, 1), (2, 0)}\n",
-    "\n",
-    "print(f\"f(x): {to_str(polynomial)}\")\n",
-    "\n",
-    "x = 2\n",
-    "f_x = evaluate_polynomial(polynomial, x)\n",
-    "print(f\"f({x}): {f_x}\")\n",
-    "\n",
-    "f_prime = differentiate(polynomial)\n",
-    "print(f\"f'(x): {to_str(f_prime)}\")\n",
-    "\n",
-    "f_prime_x = evaluate_polynomial(f_prime, x)\n",
-    "print(f\"f'({x}): {f_prime_x}\")"
+    "test_polynomial_outputs(polynomial, 2)"
    ]
   },
   {
@@ -332,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -348,18 +336,7 @@
    ],
    "source": [
     "polynomial =  {(1, 5), (2, 3), (-1, 2)}\n",
-    "\n",
-    "print(f\"f(x): {to_str(polynomial)}\")\n",
-    "\n",
-    "x = 2\n",
-    "f_x = evaluate_polynomial(polynomial, x)\n",
-    "print(f\"f({x}): {f_x}\")\n",
-    "\n",
-    "f_prime = differentiate(polynomial)\n",
-    "print(f\"f'(x): {to_str(f_prime)}\")\n",
-    "\n",
-    "f_prime_x = evaluate_polynomial(f_prime, x)\n",
-    "print(f\"f'({x}): {f_prime_x}\")"
+    "test_polynomial_outputs(polynomial, 2)"
    ]
   },
   {
@@ -371,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -387,18 +364,7 @@
    ],
    "source": [
     "polynomial =  {(7, 0)}\n",
-    "\n",
-    "print(f\"f(x): {to_str(polynomial)}\")\n",
-    "\n",
-    "x = 2\n",
-    "f_x = evaluate_polynomial(polynomial, x)\n",
-    "print(f\"f({x}): {f_x}\")\n",
-    "\n",
-    "f_prime = differentiate(polynomial)\n",
-    "print(f\"f'(x): {to_str(f_prime)}\")\n",
-    "\n",
-    "f_prime_x = evaluate_polynomial(f_prime, x)\n",
-    "print(f\"f'({x}): {f_prime_x}\")"
+    "test_polynomial_outputs(polynomial, 2)"
    ]
   },
   {
@@ -410,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -426,18 +392,7 @@
    ],
    "source": [
     "polynomial =  {(1, 1)}\n",
-    "\n",
-    "print(f\"f(x): {to_str(polynomial)}\")\n",
-    "\n",
-    "x = 2\n",
-    "f_x = evaluate_polynomial(polynomial, x)\n",
-    "print(f\"f({x}): {f_x}\")\n",
-    "\n",
-    "f_prime = differentiate(polynomial)\n",
-    "print(f\"f'(x): {to_str(f_prime)}\")\n",
-    "\n",
-    "f_prime_x = evaluate_polynomial(f_prime, x)\n",
-    "print(f\"f'({x}): {f_prime_x}\")"
+    "test_polynomial_outputs(polynomial, 2)"
    ]
   },
   {
@@ -504,7 +459,8 @@
     "\n",
     "* The list is a nice idea. Simple to understand and very effective for low-rder polynomials. Great for starting and learning how to map mathematics to code.\n",
     "* Use of recursion is also very elegent. It does have issues as the order or the polynomials increases. For example, you would never use such on low-power moobile devices for crypographic curve evaluation. \n",
-    "* Mitchell reminded me about the importance of testing more corner cases.\n"
+    "* Mitchell DeBruyn reminded me about the importance of testing more corner cases.\n",
+    "* Mitchell DeBruyn also gave some good feedback regarding duplicate code (on the testing side) \n"
    ]
   }
  ],
